# ShellLab-rs-2025

./: .gitignore  Cargo.toml  Makefile  README.md  grader.py  grader_config.toml  tshref
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: classroom.yml
docs/: guide.md
src/: builtins.rs  exec.rs  jobs.rs  main.rs  parser.rs  shell.rs  signals.rs  utils.rs
tests/cases/1-eof/: config.toml
tests/cases/10-fg/: config.toml  judge.py
tests/cases/11-sigint-proc-group/: check_ps_output.py  config.toml
tests/cases/12-sigtstp-proc-group/: check_ps_output.py  config.toml
tests/cases/13-restart/: config.toml  judge_ps_running.py  judge_ps_stopped.py
tests/cases/14-errors/: config.toml
tests/cases/15-all/: config.toml
tests/cases/16-other-proc-sig/: config.toml
tests/cases/17-cd/: config.toml  judge.py
tests/cases/18-io-redirect/: config.toml  judge.py
tests/cases/2-quit/: config.toml
tests/cases/3-foreground-job/: config.toml
tests/cases/4-background-job/: config.toml
tests/cases/5-jobs/: config.toml  judge_jobs.py
tests/cases/6-sigint/: config.toml
tests/cases/7-sigint-only-fg/: config.toml
tests/cases/8-sigtstp/: config.toml
tests/cases/9-bg/: config.toml
